# Desafio-icasei

./: .gitignore  README.md
MF_VIDEOS/: index.html  package-lock.json  package.json  tsconfig.json
MF_VIDEOS/assets/styles/: index.scss
microfrontends/: README.md  package-lock.json  package.json
web_backend/: Dockerfile  README.md  pyproject.toml  requirements.txt
web_backend/api/: main.py  schemas.py  settings.py
web_backend/api/routers/: videos.py
web_backend/api/utils/: __init__.py  format_data.py  youtube_query.py
web_backend/tests/: conftest.py  test_videos.py
web_backend/tests/assets/: youtube-request.json
web_frontend/: README.md
web_frontend/mf_drawer/: Dockerfile  nginx.conf  package.json  tsconfig.json
web_frontend/mf_drawer/src/: index.html
web_frontend/mf_drawer/src/scripts/: index.ts
web_frontend/mf_drawer/src/styles/: index.scss
web_frontend/mf_videos/: Dockerfile  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.mjs
web_frontend/mf_videos/src/: index.html  index.scss  index.ts
web_frontend/mf_videos/src/favorite/: index.html  index.ts
web_frontend/mf_videos/src/scripts/: index.ts
web_frontend/mf_videos/src/scripts/types/: video.ts
web_frontend/mf_videos/src/services/: api.ts
web_frontend/mf_videos/src/styles/: index.scss
web_frontend/mf_videos/src/utils/: debouce.ts
