[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["jdaniielc <jdsc2@cin.ufpe.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
requests = "^2.32.3"
pydantic-settings = "^2.3.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
pytest-cov = "^5.0.0"
requests-mock = "^1.12.1"
taskipy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
run = 'fastapi dev api/main.py'
test = 'pytest -s -x --cov=api -vv'
post_test = 'coverage html'